--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,71 +1,69 @@
 <%=render 'courses/search/search_js' %>
-<br>
-<div id="results" class="container">
+
 <%= search_form_for @q, url:"/courses/", class:"form-inline" do |f| %>
 	<div class="row">	
-		<div class="col-md-offset-3 col-md-8">
-			<div class="input-group" >
-				<%=text_field_tag :custom_search,params[:custom_search], class: "form-control", placeholder:"課名/老師/時間/向度",style:"width:350px;" %>
+		<div class="col-md-12 col-sm-12 col-xs-12 text-center">
+			<div class="input-group" style="/*display:table-cell;*/" >
+				<%=text_field_tag :custom_search,params[:custom_search], class: "form-control", placeholder:"課名/老師/時間/向度",style:"/*width:350px;*/" %>
 				<span class="input-group-btn">
 					<button type="submit" class="btn btn-primary" id="search"><%=fa_icon "search"%></button>        
 				</span><!-- /btn-group -->
 			</div><!-- /input-group -->
-			<div class="checkbox">
+			<div class="hidden-xs checkbox">
 				<label style="font-size:16px;">
 					<%=check_box_tag "adv_toggle",params[:adv_toggle],params[:adv_toggle],onchange: "$('#adv-search').toggleClass('hidden');$('#q_department_id_eq').val('');" %>
 					進階搜尋
 				</label>
 			</div>
 		</div>
-
 	</div>
-	<div class="hidden row" id="adv-search">
+	<div class="hidden row hidden-xs" id="adv-search">
 		<br>
-		<div class="col-md-offset-3 col-md-8">
-			<div style="width:108px;display:inline-block;">
+		<div class="col-md-12 col-sm-12 col-xs-12 text-center">
+			<div class="col-group" style="/*width:108px;*/display:inline-block;">
 				<%= f.select :semester_id_eq, options_for_select(@sem_sel,params[:q] ? params[:q][:semester_id_eq] : 0),{:prompt=> "所有學期"},{ :class=> "form-control"} %>				
 			</div>
-			<div style="width:120px;display:inline-block;">
+			<div class="col-group" style="/*width:120px;*/display:inline-block;">
 				<%= select_tag "degree" ,options_for_select(Department.degreeSel,params[:degree]), class: "form-control",:onchange=>"change_degree($(this))" %>		
 			</div>	
-			<div style="width:260px;display:inline-block;">				
-				<%= f.select :department_id_eq,render("courses/search/undergrad_options"),{:prompt=> "系所"},{ :class=> "form-control"} %>
+			<div class="col-group" style="/*width:260px;*/display:inline-block;">				
+				<%= f.select :department_id_eq,render("courses/search/common_options"),{:prompt=> "系所"},{ :class=> "form-control"} %>
 			</div>
 		</div>	
 	</div>
 <% end %>
 <br>
 
-<table class="table table-hover bg-white-transparen" id="course_table" style="background-color:white;" >
+<table class="table table-hover" id="course_table" style="background-color:white;" >
 	<tr class="row">
-		<th class="col-md">學期</th>
-		<th class="col-md-">系所/摘要</th>
-		<th class="col-md-">課名</th>
-		<th class="col-md-">老師</th>
-		<th class="col-md-">學分</th>
-		<th class="col-md-">時間</th>
-		<th class="col-md-">年級</th>
-		<th class="col-md-">收藏</th>
+		<th class="hidden-xs">學期</th>
+		<th class="hidden-xs">系所/摘要</th>
+		<th class="">課名</th>
+		<th class="">老師</th>
+		<th class="">學分</th>
+		<th class="">時間</th>
+		<th class="">年級</th>
+		<th class="hidden-xs">收藏</th>
 	</tr>
 	<tbody>
 	<% cd_ids=cookies.signed[:cd].nil? ? [] : JSON.parse(cookies.signed[:cd]) %>
 	<% if !@cds.empty? %>
 		<% @cds.each do |cd| %>
 				<tr id="<%=cd.id%>" class="row clickable-row clickable-hover" href="<%=course_path(cd.id)%>">
-					<td class="">
+					<td class="hidden-xs">
 						<%=cd.semester_name%>
 					</td>
-					<td class="text-cente">
+					<td class="hidden-xs">
 						<%="#{cd.department_ch_name} #{cd.brief}"%>
 					</td>
-					<td class="text-cente"><%= cd.course_ch_name %></td>
-					<td class="text-cente"><%= cd.teacher_name %></td>
-					<td class="text-cente"><%= cd.course_credit %></td>
-					<td class="text-cente"><%= cd.time %></td>
-					<td class="text-cente">
+					<td class=""><%= cd.course_ch_name %></td>
+					<td class=""><%= cd.teacher_name %></td>
+					<td class=""><%= cd.course_credit %></td>
+					<td class=""><%= cd.time %></td>
+					<td class="">
 						<%=cd.grade%>
 					</td>
-					<td class="text-cente" onclick="">
+					<td class="hidden-xs" onclick="">
 						<% type=cd_ids.present?&&cd_ids.include?(cd.id) ? "delete":"add" %>
 						<%=fa_icon type=="add" ? "square-o 2x" :"check-square-o 2x", style:"color:lightseagreen;", data: type,class:"cart-control"%>
 						
@@ -74,8 +72,8 @@
 		<% end %>
 	<% else %>
 		<tr class="row">
-			<td colspan="6" class="text-center">
-				<h3>查無結果!</h3>
+			<td colspan="7" class="text-center">
+				查無結果!
 			</td>
 		</tr>		
 	<% end %>
@@ -84,7 +82,6 @@
 
 <%= paginate @cds, :window=>2 %>
 
-</div>
 
 <script>
 	$(function(){
