--- a/app/views/courses/search/_search_js.html.erb
+++ b/app/views/courses/search/_search_js.html.erb
@@ -9,9 +9,10 @@
 		dept_sel['1']='<%=j render "courses/search/undergrad_options" %>'
 		dept_sel['2']='<%=j render "courses/search/common_options" %>'
 		dept_sel['3']='<%=j render "courses/search/graduate_options" %>'
-		
+		if(obj.val()!="0"){
 		$("#q_department_id_eq").html(dept_sel[obj.val()]);
 		$("#q_course_details_department_id_eq").html(dept_sel[obj.val()]);//if it's in course_maps/edit
+		}
 	}
 
 
