add banner (carousel) in Events

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,7 @@
 @import "course_maps";
 @import "discuss";
 @import "dropdown";
+//@import "events";
 @import "header";
 @import "joyride-2.1";
 @import "jquery-ui";
