--- a/app/assets/stylesheets/events.css.scss.erb
+++ b/app/assets/stylesheets/events.css.scss.erb
@@ -1,14 +1,93 @@
-@import "bootstrap-sprockets";
-@import "bootstrap";
 @import "application";
 
-.search-block{
+
+/*************
+	layout
+*************/
+.layout-content{
+	@extend .container;
+	@extend .center-block;
+}
+
+
+
+/*************
+	module
+**************/
+.layout-content > .form{
 	height: auto;
 	margin: 30px auto;
+	padding: 3px 3px;
 }
+
+.form-wapper{
+	@extend .container;
+	margin: 30px auto;
+}
+
+/*------------------------
+	banner
+------------------------*/
+
+.banner__inner{
+	@extend .item;
+	width: auto;
+	height: 300px;
+}
+
+.banner__image{
+	@extend .center-block;
+	width: auto;
+	height: 100%;
+}
+
+.banner__caption{
+	@extend .carousel-caption;
+	font-size: 24px;
+}
+
+
+/*------------------------
+	event-block group 
+	attributes
+------------------------*/
+
+.events--container{
+	@extend .container;
+	@extend .center-block;
+	@extend .row;
+}
+.events--theme{
+	@extend .container;
+	@extend .col-md-12;
+	
+}
+
+.events > h1{
+}
+
+.theme-events--swirl{
+	@extend .events--theme;
+	background-image: url(<%=asset_path("events/bg_swirl.png")%>);
+	//linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 70%);
+	//background: #66ccff;
+	//background: #ffcc99;
+}
+.theme-events--pinkrice{
+	@extend .events--theme;
+	background-image: url(<%=asset_path("events/bg_pinkRice.png")%>);
+	//linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 70%);
+	//background: #66ccff;
+}
+
+
+/*------------------------
+	individual 
+	event-block 
+	attributes
+------------------------*/
 .event-block{
 	@extend .col-md-3;
-	@extend .col-sm-4;
 	background: rgba(255, 255, 255, 0.7);
 	height: 200px;
 	border:3px solid #c1eaff;
@@ -16,12 +95,13 @@
 	padding: 20px 20px;
 	font-size: 16px;
 }
-.event-block-top{
+.event-block__top{
 	padding: 3px 3px;
 }
-.event-block-bottom{
+.event-block__bottom{
 	border: 2px 0 0 0 solid #c1eaff;
 }
+
 .flag {  /* origin from css-tricks.com, via Zoe Rooney */
 	width: 60px; 
 	height: 36px; 
@@ -36,26 +116,28 @@
 	border-left: 30px solid transparent; 
 	border-right: 30px solid transparent; 
 }
-.event_date{
+.event__date{
 	@extend .text-right;
-	@extend .flag;
+	//@extend .flag;
 	position: absolute;
-	height: 20%;
+	pagging: 2px 2px;
+	height: 15%;
 	top: -15px;
+	bottom: auto;
 	left: 75%;
 	font-size: 16px;
 }
-.event_today{
+.event__date--today{
 	background: #f8d4d4;
 }
-.event_past {
+.event__date--past {
 	background: #d1d1e0;
 }
-.event_future{
+.event__date--future{
 	background: #ccf1ff; 
 }
-.event_type{
-	@extend .text-right;
+.event__type{
+	//@extend .text-right;
 	width: 100%;
 	height: 100%;
 	position: absolute;
@@ -66,42 +148,20 @@
 .wrapper{
 	vertical-align: middle;
 }
-.poster{
-	height: 120px;
-	width: 250px;
-}
-.event_title{
+
+.event__title{
 	display: inline-block;
 }
-.event_location{
+.event__location{
 	//@extend .pull-right;
 	position: absolute;
 	display: overflow;
 	bottom: 10px;
 	right: 20px;
 }
-.events-container{
-	@extend .container;
-	@extend .center-block;
-	@extend .row;
-}
-.events-theme{
-	@extend .container;
-	@extend .col-md-12;
-	
-}
-.event-theme-title{
-}
-#events-theme1{
-	@extend .events-theme;
-	background-image: url(<%=asset_path("events/bg_swirl.png")%>);
-	//linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 70%);
-	//background: #66ccff;
-	//background: #ffcc99;
-}
-#events-theme2{
-	@extend .events-theme;
-	background-image: url(<%=asset_path("events/bg_pinkRice.png")%>);
-	//linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 70%);
-	//background: #66ccff;
+.event__image{
+	@extend .img-responsive;
+	@extend .img-rounded;
+	height: 120px;
+	width: 250px;
 }
