events: add bottom manu

--- a/app/assets/stylesheets/events.css.scss.erb
+++ b/app/assets/stylesheets/events.css.scss.erb
@@ -1,5 +1,5 @@
 @import "application";
-
+@import "events_component";
 
 /*************
 	layout
@@ -8,8 +8,6 @@
 	@extend .container;
 	@extend .center-block;
 }
-
-
 
 /*************
 	module
