--- a/app/views/course_content/_scroll_sidebar.html.erb
+++ b/app/views/course_content/_scroll_sidebar.html.erb
@@ -1,24 +1,39 @@
-<div id="sidebar-menu" class="scroll-sidebar hidden-xs hidden-sm" style="font-size:16px;position:fixed;margin-top:100px;">
-	<ul class=" nav nav-stacked affix main-menu">
-	<li><a href="#tc">課程資訊</a></li>
-	<ul class="nav sub-menu">
-		<li><a href="#statistics">歷年統計</a></li>
-		<li><a href="#course-tips">課程攻略</a></li>
-		<li><a href="#comments">留言板</a></li>
-	</ul>
+<div id="sidebar-menu" class="scroll-sidebar blue-menu col-md-2" style="font-size:16px;position:fixed;margin-top:100px;">
+	<ul class="nav">
+	<li class="blue-btn"><a href="#tc">課程資訊</a></li>
+	<!--<ul class="nav sub-menu">-->
+		<li class="blue-btn"><a href="#statistics">歷年統計</a></li>
+		<li class="blue-btn"><a href="#course-tips">課程攻略</a></li>
+		<li class="blue-btn"><a href="#comments">留言板</a></li>
+	<!--</ul>-->
 	
-	<li><a href="#compare">教授比一比</a></li>
-	<li><a href="#discuss">課程(心得)討論區</a></li>
-	<li><a href="#files">考古題</a></li>
+	<li class="blue-btn"><a href="#compare">教授比一比</a></li>
+	<li class="blue-btn"><a href="#discuss">課程(心得)討論區</a></li>
+	<li class="blue-btn"><a href="#files">考古題</a></li>
 	</ul>
 </div>
+<!--test-->
+<!--
+<div class="col-md-2 blue-menu">
+	<div class="blue-btn">課程相關</div>
+	<div class="blue-btn">課程資訊</div>
+	<div class="blue-btn">課程心得</div>
+	<div class="blue-btn">留言板</div>
+	<div class="blue-btn">教授比一比</div>
+	<div class="blue-btn">考古題</div>
+	<div class="blue-btn">討論區</div>
+	<div class="blue-not-btn" style="border:none">=</div>
+	<div class="blue-not-btn">課程收藏</div>
+	<a href="#"><div class="blue-btn2" >當代世界世界世界世...</div></a>
+</div>
+-->
 
 <script>
 $(document).ready(function() {
 	if(!isMobile){
 		$('body').scrollspy({ target: '#sidebar-menu',offset:60 });
-			var sidebarMainMenu = $('#sidebar-menu .main-menu');
-		$('.main-menu li a').click(function(event) {
+			var sidebarMainMenu = $('#sidebar-menu .blue-menu');
+		$('.blue-menu li a').click(function(event) {
 				event.preventDefault();
 			$('body').scrollTo($(this).attr('href'),700,{offset:-60});
 		});
