course_view revise

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -566,9 +566,14 @@
 				</span>
 			</div>
 		</div>
-		<div class="row" id="single-compare" >
-		</div>
 		
+		<div class="separation-line"></div>
+		
+		<div class="row " id="single-compare" >
+		</div>
+		<br><br>
+		<div class="separation-line"></div>
+		<br><br>
 		<div class="row bg-white">			
 			<h4 style="padding-left:15px;">
 				<i class="fa fa-gamepad"></i> 課程資訊：
@@ -595,6 +600,7 @@
 			</div>
 			<div id="container-reg-num" style="height:80%; width:80%;"></div></br>
 			<div id="container-score" style="height:80%; width:80%;"></div>		
+			<div class="separation-line"></div>
 			<div id="course-tips" class="panel-heading">
 				<h2 class="panel-title">
 					<p><%=fa_icon "gamepad"%> 課程攻略：</p>
