change style of carousel (banner) control arrows.

--- a/app/assets/stylesheets/events.css.scss.erb
+++ b/app/assets/stylesheets/events.css.scss.erb
@@ -44,6 +44,24 @@
 	font-size: 24px;
 }
 
+// redefine the banner color
+.carousel-control.left{
+	left: 5%;
+} 
+
+.carousel-control.right {
+	right: 5%;
+}
+
+.carousel-control.left, .carousel-control.right {
+    background-image: none;
+	background-color: #a1a3a4;
+	width: 5%;
+	height: 20%;
+	position: absolute;
+	top: 40%;
+}
+
 
 /*------------------------
 	event-block group 
