resolve merged conflict

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -18,6 +18,10 @@
 	$('#myCarousel').hover(function() {
 		$(this).carousel('pause') 
     });	
+
+</script>
+
+	
 <div class="layout-content" style="" bg-white>
 	<div id="js-banner" class="events-banner">
 		<div id="myCarousel" class="carousel slide">
