--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -167,9 +167,9 @@
 		height:45px;
 		border-bottom:1px #3e4d64 solid;
 		text-align:center;
-		color:#94acd3;
+		color:#90deff;
 		line-height:45px;
-		
+		opacity:1;
 		transition:0.4s linear color,0.4s linear background,0.4s linear border;
 	}
 
@@ -522,16 +522,11 @@
 	{
 		background:rgba(0,0,0,.3);
 	}
-	.a-setting
+	body
 	{
-		color:#fff;
-		font-size:14px;
+		font-size:15px;
 	}
-	/*
-	#sidebar-menu .nav:hover
-	{
-		background:red;
-	}*/
+
 	#sidebar-menu .nav a
 	{
 		background:none;
@@ -574,19 +569,30 @@
 		<br><br>
 		<div class="separation-line"></div>
 		<br><br>
-		<div class="row bg-white">			
+				
 			<h4 style="padding-left:15px;">
-				<i class="fa fa-gamepad"></i> 課程資訊：
-					永久課號 <strong><%=@data[:course_real_id]%></strong>
-					學分 <strong><%=@data[:course_credit]%></strong>
-					<%=link_to "課程綱要","https://course.nctu.edu.tw/Course/CrsOutline/show.asp?Acy=#{@data[:year]}&Sem=#{@data[:half]}&CrsNo=#{@data[:temp_cos_id]}",target: "_blank"%>
-					<% if not @data[:open_on_latest]%>
-						(本學期無開課)
-					<% end %>
-					查看更多 
-					<%=link_to("javascript:void(0);", :class=>"see-more-course") do%>	
-						<%=fa_icon "search-plus"%>
-					<% end %>					
+				<p><h3><i class="fa fa-book"></i><strong> 課程資訊</strong></h3><br></p>
+					<table class="table-invisible" >
+						<tr>
+							<td>永久課號 <strong><%=@data[:course_real_id]%></strong></td>
+							<td>學分 <strong><%=@data[:course_credit]%></strong></td>
+						</tr>
+						<tr>
+							<td>
+							<%=link_to "課程綱要","https://course.nctu.edu.tw/Course/CrsOutline/show.asp?Acy=#{@data[:year]}&Sem=#{@data[:half]}&CrsNo=#{@data[:temp_cos_id]}",target: "_blank"%>
+							
+							<% if not @data[:open_on_latest]%>
+								(本學期無開課)
+							<% end %>
+							</td>
+							<td>
+							查看更多 
+							<%=link_to("javascript:void(0);", :class=>"see-more-course") do%>	
+								<%=fa_icon "search-plus"%>
+							<% end %>
+							</td>
+						</tr>
+					</table>
 			</h4>
 			<div class="panel-heading course-info">
 				<%=render "/course_content/course_info" %>
@@ -594,46 +600,49 @@
 			<div class="panel-heading" id="statistics">
 				<h2 class="panel-title">
 					<p id="statistics-header">
-						<%=fa_icon "align-left"%> 歷年統計：
+						<h3><%=fa_icon "align-left"%><strong>  歷年統計</strong></h3>
 					</p>	
 				</h2>	
 			</div>
 			<div id="container-reg-num" style="height:80%; width:80%;"></div></br>
 			<div id="container-score" style="height:80%; width:80%;"></div>		
+			<br><br>
 			<div class="separation-line"></div>
-			<div id="course-tips" class="panel-heading">
+			<div id="course-tips" class="panel-heading" >
 				<h2 class="panel-title">
-					<p><%=fa_icon "gamepad"%> 課程攻略：</p>
+					<p><h3><strong><%=fa_icon "gamepad"%> 課程攻略</strong></h3></p>
 				</h2>	
 			</div>
-			<div class="panel-body">
-				<div class="well">
-					<div class="row" >
-						<%=fa_icon "cube"%> 作業/考試：
-						<%=link_to "編輯", "javascript:void(0);", :class=>"edit-head"%>	
-						</br></br>
-						<div id="course_content_head">
-							<%=loading_img%>
-						</div>
+			<div class="panel-body" >
+				<div class="row" >
+					<%=fa_icon "cube"%> 作業/考試：
+					<%=link_to "編輯", "javascript:void(0);", :class=>"edit-head"%>	
+					</br></br>
+					<div id="course_content_head">
+						<%=loading_img%>
 					</div>
-					<hr>
-					<div class="row">
-						<%=fa_icon "cube"%> 其他內容：
-						<%=link_to "編輯", "javascript:void(0);", :class=>"edit-lists"%>	
-						</br></br>
-						<div id="course_content_lists">
-							<%=loading_img%>
-						</div>
+				</div>
+				<hr>
+				<div class="row">
+					<%=fa_icon "cube"%> 其他內容：
+					<%=link_to "編輯", "javascript:void(0);", :class=>"edit-lists"%>	
+					</br></br>
+					<div id="course_content_lists">
+						<%=loading_img%>
 					</div>
-				</div>	
+				</div>
+					
 			</div>
+			<div class="separation-line"></div>
+			
 			<div id="course-tips" class="panel-heading">
 				<h2 class="panel-title">
 					<p>
-					<%=fa_icon "weixin"%> 留言板：
+						<h3><strong><%=fa_icon "weixin"%> 留言板：</strong></h3>
 					</p>
 				</h2>	
 			</div>
+			<div class="separation-line"></div>
 			<div class="well bg-grey " id="comments"></div>
 		<% if current_user %>	
 			<div class="row comment-form" >
@@ -659,7 +668,7 @@
 				<div id="files" class="panel-body">
 				</div>		
 			</div>
-		</div>	
+		
 	</div>
 	
 </div>
