--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -98,17 +98,10 @@
 	
 	<nav class="cbp-spmenu cbp-spmenu-horizontal cbp-spmenu-bottom" id="menuBottom">
 		<h3>我的活動</h3>
-		<a href="#">活動1</a>
-		<a href="#">活動2</a>
-		<a href="#">活動3</a>
-		<a href="#">Catsear azuki bean</a>
-		<a href="#">Dandelion bunya</a>
-		<a href="#">Rutabaga</a>
-		<a href="#">Celery seakale</a>
-		<a href="#">Dulse daikon</a>
-		<a href="#">Zucchini garlic</a>
-		<a href="#">Catsear azuki bean</a>
-		<a href="#">Dandelion bunya</a>
-		<a href="#">Rutabaga</a>
+		<% if current_user %>
+			<% current_user.attend_events.each do |myEvent| %>
+				<%=link_to myEvent.get_title, "events/"+myEvent.id.to_s %>
+			<% end %>
+		<% end %>
 	</nav>
 </div>
