new user show page

--- a/app/views/user/collections.html.erb
+++ b/app/views/user/collections.html.erb
@@ -1,3 +1,5 @@
+<%=render "link_bar" %>
+
 <h3 class="text-center">課表收藏 <%=button_tag "使用說明", :class=>"btn btn-info", :onclick=>"$('#info-collection').modal('show');"%></h3>
 
 <table class="table table-hover text-center bg-white">
